--- a/CSS/index.css
+++ b/CSS/index.css
@@ -91,6 +91,7 @@ form input[type="button"]{
     border-radius: 10px;
     margin-top: -150px;
     margin-bottom: 50px;
+    margin-inline: auto;
 }
 /* #forecast .forecast{
     width: 33.3333%;
